--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,21 +17,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
+
       - name: Terraform Init
         id: init
         run: terraform init
         working-directory: ./Terraform-VPC
+
       - name: Terraform Validate
         id: validate
         run: terraform validate
         working-directory: ./Terraform-VPC
+
       - name: Terraform Plan
         id: plan
         run: terraform plan
         working-directory: ./Terraform-VPC
+
       - name: Terraform Apply
         id: apply
-        run: terraform destroy --auto-approve
+        run: terraform apply --auto-approve
         working-directory: ./Terraform-VPC
