--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,3 +40,8 @@ jobs:
         id: apply
         run: terraform apply --auto-approve
         working-directory: ./Terraform-VPC
+
+      - name: Terraform destroy
+        id: destroy
+        run: terraform destroy
+        working-directory: ./Terraform-VPC  
