--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,5 +43,5 @@ jobs:
 
       - name: Terraform destroy
         id: destroy
-        run: terraform destroy
+        run: terraform destroy --auto-approve
         working-directory: ./Terraform-VPC  
